# tiny-iir

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
include/: IIRButter.h  IIRCheby1.h  IIRCheby2.h  IIRFilter.h
include/butter/: IIRButter.h
include/cheby1/: Cheby1LPF.h  IIRCheby1.h
include/cheby2/: IIRCheby2.h
include/common/: CascadeFilter.h  IIRFilter.h  PassTypeData.h  PassTypeTransform.h  common_utils.h  utils.h
include/elliptic/: EllipticSolver.h  IIRElliptic.h  elliptic_utils.h
platform/arm/: BiquadCascade.h  CascadeFilter.h  type_utils.h  utils.h
platform/general/: BiquadBlock.h  CascadeFilter.h
platform/generic/: BiquadBlock.h  BiquadCascade.h  CascadeFilter.h  type_utils.h  utils.h
platform/posix/: BiquadBlock.h  CascadeFilter.h
tests/: CMakeLists.txt  test_cheby1.cpp  test_cheby2.cpp  test_filters.cpp  test_utils.h
tests/include/common/: test_utils.h
tests/include/fixed-point/: test_utils_fixed_point.h
tests/src/common/: test_butter.cpp  test_cheby1.cpp  test_cheby2.cpp  test_elliptic.cpp
tests/src/elliptic/: test_elliptic.cpp
tests/src/fixed-point/: test_butter.cpp  test_cheby1.cpp  test_cheby2.cpp  test_elliptic.cpp
tools/: demo.json  design_cli.cpp  plot_sos.py
tools/designer-cli/: CMakeLists.txt  designer_cli.cpp
